# VieClus

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SConscript  SConstruct  compile.sh  compile_withcmake.sh  pyproject.toml  test_vieclus.py
.github/workflows/: build.yml  publish-to-pypi.yml
app/: configuration.h  evaluator.cpp  evo_clustering.cpp  parse_parameters.h
examples/: as-22july06.graph
interface/: VieClus_interface.cpp  VieClus_interface.h  vieclus_interface.cpp  vieclus_interface.h
lib/clustering/: label_propagation.h  labelpropagation.cpp  labelpropagation.h  louvainmethod.cpp  louvainmethod.h  neighborhood.cpp  neighborhood.h
lib/clustering/coarsening/: coarsening.cpp  coarsening.h  contractor.cpp  contractor.h
lib/logging/: bexception.cpp  bexception.h  log.h
lib/logging/experiments/: experimentinfo.cpp  experimentinfo.h  experimentinfojson.cpp  experimentinfojson.h  experimentinfolog.cpp  experimentinfolog.h  experimentinfoobservable.cpp  experimentinfoobservable.h
lib/parallel_mh_clustering/: diversifyer.h  parallel_mh_async_clustering.cpp  parallel_mh_async_clustering.h  population_clustering.cpp  population_clustering.h
lib/parallel_mh_clustering/exchange/: exchanger_clustering.cpp  exchanger_clustering.h
lib/tools/: .modularitymetric.cpp.swp  global_timer.h  graph_communication.cpp  modularitymetric.cpp  modularitymetric.h  mpi_tools.cpp  mpi_tools.h  pseudo_mpi.h
misc/pymodule/: vieclus.cpp
python/: test_vieclus.py
python/vieclus/: __init__.py
